--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/better-sqlite3": "^7.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "better-sqlite3": "^7.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.3"
   }
